# phea-atlas

./: .gitignore  .zenodo.json  CITATION.cff  LICENSE  README.md  pyproject.toml
data/: miedema_params.csv
data/periodic_table/: element_properties.csv
data/processed/: binary_h05_dataset.csv  training_pairs.csv
data/sources/: deffrennes2024_rk_params.csv  entall_binary_enthalpies.csv
models/: gp_full_model.pt
run/: 00_ml_baselines.py  01_prepare_exp_data.py  02_run_calibration.py  03_run_case_study.py  04_atlas_maps.py  05_decision_value.py  06_independence_diagnostic.py  07_landscape.py  08_exact_atlas.py  09_margin_value.py
src/baselines/: bnn.py  deep_ensemble.py  random_forest.py
src/data_preparation/: miedema.py
src/gp/: __init__.py  data_prep.py  evaluate.py  model.py  pipeline.py  predict.py  train.py
src/phea/: __init__.py  features.py  predict.py
tests/: conftest.py  test_atlas.py  test_data_integrity.py  test_decision_value.py  test_features.py  test_predict.py  verify_plan_consistency.py
