[project]
name = "gp-hea-screening"
version = "0.1.0"
description = "Multi-fidelity GP for calibrated HEA candidate screening with uncertainty quantification"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "pandas>=2.2",
    "scipy>=1.13",
    "scikit-learn>=1.5",
    "matplotlib>=3.9",
    "seaborn>=0.13",
    "gpytorch>=1.15.2",
    "torch>=2.12.0",
    "python-docx>=1.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.1.0",
]
